Izmjenjeni modeli i dodan model  Vozac

--- a/ture/templates/home.html
+++ b/ture/templates/home.html
@@ -24,13 +24,13 @@
     <table>
         <tr>
             <th>Relacija</th>
-            <th>Polazak</th>
-            <th>Dolazak</th>
-            <th>Broj prijeđenih KM</th>
+            <th>Datum polaska</th>
+            <th>Datum dolaska</th>
+            <th>Broj prijeđenih km</th>
             <th>Zaduženje</th>
             <th>Razduženje</th>
             <th>Razlika</th>
-            <th>Br putnog naloga</th>
+            <th>Br.putnog naloga</th>
             <th>Iznos</th>
             <th>Dnevnice</th>
             <th>Čekanje</th>
