--- a/ture/templates/popis_vozaca.html
+++ b/ture/templates/popis_vozaca.html
@@ -18,6 +18,7 @@
     {% empty %}
         <li>Nema unesenih vozača.</li>
     {% endfor %}
+    <p><a href="{% url 'unos_ture' %}">← Povratak na popis tura</a></p>
 </ul>
 </body>
 </html>
