Kreirana homepage i premjesteni podaci

--- a/templates/popis_vozaca.html
+++ b/templates/popis_vozaca.html
@@ -18,7 +18,7 @@
     {% empty %}
         <li>Nema unesenih vozača.</li>
     {% endfor %}
-    <p><a href="{% url 'unos_ture' %}">← Povratak na popis tura</a></p>
+    <p><a href="{% url 'homepage' %}">← Povratak na popis tura</a></p>
 </ul>
 </body>
 </html>
