--- a/templates/profil_vozaca.html
+++ b/templates/profil_vozaca.html
@@ -65,5 +65,6 @@
     {% endif %}
 
     <p><a href="{% url 'popis_vozaca' %}">← Povratak na popis vozača</a></p>
+    <p><a href="{% url 'homepage' %}">← Povratak na naslovnu stranicu</a></p>
 </body>
 </html>
