Dodano dugme na homepage za dodavanje vozaca

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -12,6 +12,7 @@
         .totals { margin-top: 20px; font-weight: bold; }
     </style>
 </head>
+<p><a href="{% url 'dodavanje_vozaca' %}">Dodaj vozača</a></p>
 <body>
     <h2>Popis svih tura</h2>
     <table>
@@ -57,5 +58,6 @@
         {% endfor %}
 
     </table>
+
 </body>
 </html>
