Dodano dugme za kreiranje ture na homepage

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -12,8 +12,8 @@
         .totals { margin-top: 20px; font-weight: bold; }
     </style>
 </head>
-<p><a href="{% url 'dodavanje_vozaca' %}">Dodaj vozača</a></p>
 <body>
+<p><a href="{% url 'dodavanje_vozaca' %}">Dodaj vozača</a></p> <p><a href="{% url 'unos_ture' %}">Dodaj turu</a></p>
     <h2>Popis svih tura</h2>
     <table>
         <tr>
