--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-<p><a href="{% url 'dodavanje_vozaca' %}">Dodaj vozača</a></p> <p><a href="{% url 'unos_ture' %}">Dodaj turu</a></p>
+<p><a href="{% url 'dodavanje_vozaca' %}">Dodaj vozača</a> | <a href="{% url 'unos_ture' %}">Dodaj turu</a></p>
     <h2>Popis svih tura</h2>
     <table>
         <tr>
@@ -33,7 +33,8 @@
         {% for t in ture %}
         <tr>
             <td><a href="{% url 'profil_vozaca' t.vozac.id %}">{{ t.vozac.ime}}</a></td>
-            <td>{{ t.relacija }}</td>
+            <td><a href="{% url 'profil_ture' t.id %}">{{ t.relacija}}</a></td>
+            {% comment %} <td>{{ t.relacija }}</td> {% endcomment %}
             <td>{{ t.datum_polaska }}</td>
             <td>{{ t.datum_dolaska }}</td>
             <td>{{ t.kilometraza }}</td>
@@ -45,6 +46,7 @@
             <td>{{ t.dnevnice }}</td>
             <td>{{ t.cekanje|default:"-" }}</td>
             <td>
+                <a href="{% url 'profil_ture' t.id %}" style="background:#66b3ff; color:white; padding:5px 10px; text-decoration:none; border-radius:4px;"> Uredi </a>
                 <form action="{% url 'zavrsi_turu' t.id %}" method="post" style="display:inline;">
                     {% csrf_token %}
                     <button type="submit" style="background:#ff6666; color:white; border:none; padding:5px 10px; cursor:pointer;">
