--- a/templates/profil_ture.html
+++ b/templates/profil_ture.html
@@ -16,7 +16,7 @@
 <body>
 
 <h2>Profil ture</h2>
-<p><a href="{% url 'homepage' %}">⟵ Povratak na naslovnu stranicu</a></p>
+<p><a href="{% url 'homepage' %}">⟵ Početna</a></p>
 
 <table>
     <tr><th>Vozač</th><td>{{ tura.vozac.ime }}</td></tr>
