--- a/templates/unos_ture.html
+++ b/templates/unos_ture.html
@@ -13,6 +13,7 @@
     </style>
 </head>
 <body>
+<p><a href="{% url 'homepage' %}">Početna</a></p>
     <h2>Unos nove ture</h2>
     <form method="post">
         {% csrf_token %}
