--- a/templates/profil_vozaca.html
+++ b/templates/profil_vozaca.html
@@ -4,6 +4,9 @@
     <title>Profil vozača - {{ vozac.ime }}</title>
 </head>
 <body>
+
+    <p><a href="{% url 'popis_vozaca' %}"> Povratak na popis vozača </a> | <a href="{% url 'homepage' %}"> Početna </a></p>
+
     <h1>Profil vozača: {{ vozac.ime }}</h1>
 
     <h3>Financije</h3>
@@ -64,7 +67,5 @@
         <p>Ovaj vozač još nema unešenih tura.</p>
     {% endif %}
 
-    <p><a href="{% url 'popis_vozaca' %}">← Povratak na popis vozača</a></p>
-    <p><a href="{% url 'homepage' %}">← Povratak na naslovnu stranicu</a></p>
 </body>
 </html>
