--- a/templates/profil_ture.html
+++ b/templates/profil_ture.html
@@ -14,9 +14,8 @@
     </style>
 </head>
 <body>
-
+<p><a href="{% url 'homepage' %}">Početna</a></p>
 <h2>Profil ture</h2>
-<p><a href="{% url 'homepage' %}">⟵ Početna</a></p>
 
 <table>
     <tr><th>Vozač</th><td>{{ tura.vozac.ime }}</td></tr>
