Premjesteni linkovi za pocetnu stranicu

--- a/templates/popis_vozaca.html
+++ b/templates/popis_vozaca.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <p>
-    <a href="{% url 'dodavanje_vozaca' %}">Dodaj vozača</a> | <a href="{% url 'homepage' %}">Početna</a>
+    <a href="{% url 'homepage' %}">Početna</a> | <a href="{% url 'dodavanje_vozaca' %}">Dodaj vozača</a>  
 </p>
 <h2>Popis vozača</h2>
 <ul>
